
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execve (char*,char**,char**) ;
 int exit (int) ;

int child_thread( void *arg )
{
    char *argv[2], *envp[1];

    argv[0] = (char *) arg;
    argv[1] = ((void*)0);
    envp[0] = ((void*)0);

    execve( (char *) arg, argv, envp );

    exit( 1 );
}
