; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_876.c_child_thread.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_876.c_child_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @child_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [2 x i8*], align 16
  %4 = alloca [1 x i8*], align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  store i8* %5, i8** %6, align 16
  %7 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 1
  store i8* null, i8** %7, align 8
  %8 = getelementptr inbounds [1 x i8*], [1 x i8*]* %4, i64 0, i64 0
  store i8* null, i8** %8, align 8
  %9 = load i8*, i8** %2, align 8
  %10 = getelementptr inbounds [2 x i8*], [2 x i8*]* %3, i64 0, i64 0
  %11 = getelementptr inbounds [1 x i8*], [1 x i8*]* %4, i64 0, i64 0
  %12 = call i32 @execve(i8* %9, i8** %10, i8** %11)
  %13 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @execve(i8*, i8**, i8**) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
